# collate-rules

./: Cargo.toml  README.md  example.txt
src/: main.rs
