[package]
name = "collate-rules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.147", features = ["serde_derive", "derive"] }
tokio = { version = "1", features = ["full"] }
